# UG-Photography1-25

./: .gitignore  README.md  pyproject.toml
Proyecto/: rename.py
Tareas/: config.typ  create_metadata.py  info_properties.txt
Tareas/Tarea-01/: Tema_libre.typ
Tareas/Tarea-02/: Sub_sob_normal_exposicion.typ  info_properties.txt  metadata.csv
Tareas/Tarea-03/: Luz_dura_luz_suave.typ  metadata.csv
Tareas/Tarea-04/: Luz_y_sombra.typ  metadata.csv
Tareas/Tarea-05/: Composicion.typ  metadata.csv
Tareas/Tarea-06/: Presa_de_la_olla.typ  metadata.csv
Tareas/Tarea-07/: Ley_de_tercios.typ  metadata.csv
Tareas/Tarea-08/: Retrato.typ  metadata.csv
Tareas/Tarea-09/: Luz_artificial.typ  metadata.csv
Tareas/Tarea-10/: Recorrido_centro.typ  metadata.csv
Tareas/Tarea-11/: Funciones_camara.typ  metadata.csv
