[tool.poetry]
name = "photography1"
version = "0.1.0"
description = "Automate image metadata extract for my photography course"
authors = ["mismorgano <mismorgano@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
exifread = "^3.0.0"
pyexiftool = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
